// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollSnapType renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-type: 0;
  -moz-scroll-snap-type: 0;
  -ms-scroll-snap-type: 0;
  scroll-snap-type: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: 0;
  -moz-scroll-snap-type: 0;
  -ms-scroll-snap-type: 0;
  scroll-snap-type: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: 0;
  -moz-scroll-snap-type: 0;
  -ms-scroll-snap-type: 0;
  scroll-snap-type: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: 0;
  -moz-scroll-snap-type: 0;
  -ms-scroll-snap-type: 0;
  scroll-snap-type: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapType renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-type: hasnot;
  -moz-scroll-snap-type: hasnot;
  -ms-scroll-snap-type: hasnot;
  scroll-snap-type: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: has;
  -moz-scroll-snap-type: has;
  -ms-scroll-snap-type: has;
  scroll-snap-type: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: hasnot;
  -moz-scroll-snap-type: hasnot;
  -ms-scroll-snap-type: hasnot;
  scroll-snap-type: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: has;
  -moz-scroll-snap-type: has;
  -ms-scroll-snap-type: has;
  scroll-snap-type: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapType renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-type: invalid.path.1;
  -moz-scroll-snap-type: invalid.path.1;
  -ms-scroll-snap-type: invalid.path.1;
  scroll-snap-type: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: invalid.path.1;
  -moz-scroll-snap-type: invalid.path.1;
  -ms-scroll-snap-type: invalid.path.1;
  scroll-snap-type: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: invalid.path.1;
  -moz-scroll-snap-type: invalid.path.1;
  -ms-scroll-snap-type: invalid.path.1;
  scroll-snap-type: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: invalid.path.1;
  -moz-scroll-snap-type: invalid.path.1;
  -ms-scroll-snap-type: invalid.path.1;
  scroll-snap-type: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapType renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-type: -54881;
  -moz-scroll-snap-type: -54881;
  -ms-scroll-snap-type: -54881;
  scroll-snap-type: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: -54881;
  -moz-scroll-snap-type: -54881;
  -ms-scroll-snap-type: -54881;
  scroll-snap-type: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: -42365;
  -moz-scroll-snap-type: -42365;
  -ms-scroll-snap-type: -42365;
  scroll-snap-type: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: -42365;
  -moz-scroll-snap-type: -42365;
  -ms-scroll-snap-type: -42365;
  scroll-snap-type: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapType renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-type: July;
  -moz-scroll-snap-type: July;
  -ms-scroll-snap-type: July;
  scroll-snap-type: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: September;
    -moz-scroll-snap-type: September;
    -ms-scroll-snap-type: September;
    scroll-snap-type: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: July;
  -moz-scroll-snap-type: July;
  -ms-scroll-snap-type: July;
  scroll-snap-type: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: September;
    -moz-scroll-snap-type: September;
    -ms-scroll-snap-type: September;
    scroll-snap-type: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: January;
  -moz-scroll-snap-type: January;
  -ms-scroll-snap-type: January;
  scroll-snap-type: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: December;
    -moz-scroll-snap-type: December;
    -ms-scroll-snap-type: December;
    scroll-snap-type: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: April;
    -moz-scroll-snap-type: April;
    -ms-scroll-snap-type: April;
    scroll-snap-type: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: May;
    -moz-scroll-snap-type: May;
    -ms-scroll-snap-type: May;
    scroll-snap-type: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-type: June;
    -moz-scroll-snap-type: June;
    -ms-scroll-snap-type: June;
    scroll-snap-type: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: January;
  -moz-scroll-snap-type: January;
  -ms-scroll-snap-type: January;
  scroll-snap-type: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: December;
    -moz-scroll-snap-type: December;
    -ms-scroll-snap-type: December;
    scroll-snap-type: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: April;
    -moz-scroll-snap-type: April;
    -ms-scroll-snap-type: April;
    scroll-snap-type: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: May;
    -moz-scroll-snap-type: May;
    -ms-scroll-snap-type: May;
    scroll-snap-type: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-type: June;
    -moz-scroll-snap-type: June;
    -ms-scroll-snap-type: June;
    scroll-snap-type: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapType renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: July;
    -moz-scroll-snap-type: July;
    -ms-scroll-snap-type: July;
    scroll-snap-type: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: September;
    -moz-scroll-snap-type: September;
    -ms-scroll-snap-type: September;
    scroll-snap-type: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: July;
    -moz-scroll-snap-type: July;
    -ms-scroll-snap-type: July;
    scroll-snap-type: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: September;
    -moz-scroll-snap-type: September;
    -ms-scroll-snap-type: September;
    scroll-snap-type: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: May;
    -moz-scroll-snap-type: May;
    -ms-scroll-snap-type: May;
    scroll-snap-type: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: June;
    -moz-scroll-snap-type: June;
    -ms-scroll-snap-type: June;
    scroll-snap-type: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: April;
    -moz-scroll-snap-type: April;
    -ms-scroll-snap-type: April;
    scroll-snap-type: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: May;
    -moz-scroll-snap-type: May;
    -ms-scroll-snap-type: May;
    scroll-snap-type: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: June;
    -moz-scroll-snap-type: June;
    -ms-scroll-snap-type: June;
    scroll-snap-type: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-type: April;
    -moz-scroll-snap-type: April;
    -ms-scroll-snap-type: April;
    scroll-snap-type: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapType renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-type: July;
  -moz-scroll-snap-type: July;
  -ms-scroll-snap-type: July;
  scroll-snap-type: July;
}

@media May {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: September;
    -moz-scroll-snap-type: September;
    -ms-scroll-snap-type: September;
    scroll-snap-type: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: July;
  -moz-scroll-snap-type: July;
  -ms-scroll-snap-type: July;
  scroll-snap-type: July;
}

@media May {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: September;
    -moz-scroll-snap-type: September;
    -ms-scroll-snap-type: September;
    scroll-snap-type: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: April;
  -moz-scroll-snap-type: April;
  -ms-scroll-snap-type: April;
  scroll-snap-type: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: January;
    -moz-scroll-snap-type: January;
    -ms-scroll-snap-type: January;
    scroll-snap-type: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-type: December;
    -moz-scroll-snap-type: December;
    -ms-scroll-snap-type: December;
    scroll-snap-type: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: April;
    -moz-scroll-snap-type: April;
    -ms-scroll-snap-type: April;
    scroll-snap-type: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-type: May;
    -moz-scroll-snap-type: May;
    -ms-scroll-snap-type: May;
    scroll-snap-type: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: April;
  -moz-scroll-snap-type: April;
  -ms-scroll-snap-type: April;
  scroll-snap-type: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: January;
    -moz-scroll-snap-type: January;
    -ms-scroll-snap-type: January;
    scroll-snap-type: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-type: December;
    -moz-scroll-snap-type: December;
    -ms-scroll-snap-type: December;
    scroll-snap-type: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: April;
    -moz-scroll-snap-type: April;
    -ms-scroll-snap-type: April;
    scroll-snap-type: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-type: May;
    -moz-scroll-snap-type: May;
    -ms-scroll-snap-type: May;
    scroll-snap-type: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapType renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-snap-type: July;
    -moz-scroll-snap-type: July;
    -ms-scroll-snap-type: July;
    scroll-snap-type: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-type: September;
    -moz-scroll-snap-type: September;
    -ms-scroll-snap-type: September;
    scroll-snap-type: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-snap-type: July;
    -moz-scroll-snap-type: July;
    -ms-scroll-snap-type: July;
    scroll-snap-type: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-type: September;
    -moz-scroll-snap-type: September;
    -ms-scroll-snap-type: September;
    scroll-snap-type: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: November;
    -moz-scroll-snap-type: November;
    -ms-scroll-snap-type: November;
    scroll-snap-type: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-type: August;
    -moz-scroll-snap-type: August;
    -ms-scroll-snap-type: August;
    scroll-snap-type: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-type: January;
    -moz-scroll-snap-type: January;
    -ms-scroll-snap-type: January;
    scroll-snap-type: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: December;
    -moz-scroll-snap-type: December;
    -ms-scroll-snap-type: December;
    scroll-snap-type: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-type: April;
    -moz-scroll-snap-type: April;
    -ms-scroll-snap-type: April;
    scroll-snap-type: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: May;
    -moz-scroll-snap-type: May;
    -ms-scroll-snap-type: May;
    scroll-snap-type: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-type: June;
    -moz-scroll-snap-type: June;
    -ms-scroll-snap-type: June;
    scroll-snap-type: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-type: January;
    -moz-scroll-snap-type: January;
    -ms-scroll-snap-type: January;
    scroll-snap-type: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: December;
    -moz-scroll-snap-type: December;
    -ms-scroll-snap-type: December;
    scroll-snap-type: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-type: April;
    -moz-scroll-snap-type: April;
    -ms-scroll-snap-type: April;
    scroll-snap-type: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-type: May;
    -moz-scroll-snap-type: May;
    -ms-scroll-snap-type: May;
    scroll-snap-type: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-type: June;
    -moz-scroll-snap-type: June;
    -ms-scroll-snap-type: June;
    scroll-snap-type: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapType renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-type: 54881;
  -moz-scroll-snap-type: 54881;
  -ms-scroll-snap-type: 54881;
  scroll-snap-type: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: 54881;
  -moz-scroll-snap-type: 54881;
  -ms-scroll-snap-type: 54881;
  scroll-snap-type: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: 42365;
  -moz-scroll-snap-type: 42365;
  -ms-scroll-snap-type: 42365;
  scroll-snap-type: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: 42365;
  -moz-scroll-snap-type: 42365;
  -ms-scroll-snap-type: 42365;
  scroll-snap-type: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapType renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-type: July;
  -moz-scroll-snap-type: July;
  -ms-scroll-snap-type: July;
  scroll-snap-type: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: July;
  -moz-scroll-snap-type: July;
  -ms-scroll-snap-type: July;
  scroll-snap-type: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: June;
  -moz-scroll-snap-type: June;
  -ms-scroll-snap-type: June;
  scroll-snap-type: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: June;
  -moz-scroll-snap-type: June;
  -ms-scroll-snap-type: June;
  scroll-snap-type: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapType renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`scrollSnapType renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-type: DarkSlateBlue;
  -moz-scroll-snap-type: DarkSlateBlue;
  -ms-scroll-snap-type: DarkSlateBlue;
  scroll-snap-type: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: DarkSlateBlue;
  -moz-scroll-snap-type: DarkSlateBlue;
  -ms-scroll-snap-type: DarkSlateBlue;
  scroll-snap-type: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: DarkSlateBlue;
  -moz-scroll-snap-type: DarkSlateBlue;
  -ms-scroll-snap-type: DarkSlateBlue;
  scroll-snap-type: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-type: DarkSlateBlue;
  -moz-scroll-snap-type: DarkSlateBlue;
  -ms-scroll-snap-type: DarkSlateBlue;
  scroll-snap-type: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
